src-tauri/compile_monitor.txt
cargo :     Checking querydb v0.1.0 (F:\centos\queryDB\src-tauri)
At line:1 char:35
+ cd "F:\centos\queryDB\src-tauri"; cargo check 2>&1 | Out-File -FilePa ...
+                                   ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking qu...ryDB\src-tauri):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error[E0252]: the name `Mutex` is defined multiple times
    --> src\commands\mysql.rs:3393:22
     |
   6 | use std::sync::Mutex;
     |     ---------------- previous import of the type `Mutex` here
...
3393 | use std::sync::{Arc, Mutex};
     |                      ^^^^^ `Mutex` reimported here
     |
     = note: `Mutex` must be defined only once in the type namespace of this module

error[E0433]: failed to resolve: use of undeclared type `SystemTime`
    --> src\commands\mysql.rs:3414:21
     |
3414 |     let timestamp = SystemTime::now()
     |                     ^^^^^^^^^^ use of undeclared type `SystemTime`
     |
help: consider importing this struct
     |
   1 + use std::time::SystemTime;
     |

error[E0433]: failed to resolve: use of undeclared type `SystemTime`
    --> src\commands\mysql.rs:3415:25
     |
3415 |         .duration_since(SystemTime::UNIX_EPOCH)
     |                         ^^^^^^^^^^ use of undeclared type `SystemTime`
     |
help: consider importing this struct
     |
   1 + use std::time::SystemTime;
     |

warning: unused import: `Mutex`
    --> src\commands\mysql.rs:3393:22
     |
3393 | use std::sync::{Arc, Mutex};
     |                      ^^^^^
     |
     = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no variant or associated item named `ULong` found for enum `mysql::Value` in the current scope
    --> src\commands\mysql.rs:3436:31
     |
3436 |                 mysql::Value::ULong(n) => n as u64,
     |                               ^^^^^ variant or associated item not found in `mysql::Value`

warning: unused variable: `conn_id`
    --> src\commands\mysql.rs:3493:5
     |
3493 |     conn_id: String,
     |     ^^^^^^^ help: if this is intentional, prefix it with an underscore: `_conn_id`
     |
     = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `duration`
    --> src\commands\mysql.rs:3494:5
     |
3494 |     duration: i64,
     |     ^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_duration`

Some errors have detailed explanations: E0252, E0433, E0599.
For more information about an error, try `rustc --explain E0252`.
warning: `querydb` (lib) generated 3 warnings
error: could not compile `querydb` (lib) due to 4 previous errors; 3 warnings emitted
